--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,10 @@
-version: "3.4"
+version: '3.4'
 services:
   api:
-    image: ghcr.io/<yourgithubaccount>/fabrikam-api:latest
+    image: 'ghcr.io/<yourgithubaccount>/fabrikam-api:latest'
     ports:
-      - "3001:3001"
+      - '3001:3001'
+  web:
+    build: ./content-web
+    image: local-fabrikam-web
+
